# OPscinema

./: .gitignore  00-readme.md  01-architecture-and-rationale.md  02-repo-structure-and-module-boundaries.md  03-contracts-ipc-errors-jobs.md  04-data-models-events-evidence-steps-anchors.md  05-storage-assets-determinism.md  06-export-manifest-and-bundles.md  07-implementation-order-phases.md  08-testing-fixtures-ci.md  09-security-privacy-verifiers.md  98-vp-stamp.md  99-one-shot-codex-prompt.md  Cargo.toml  Makefile  README.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  tests.rs
apps/desktop/src-tauri/src/agent_plant/: dag.rs  diagnostics.rs  mod.rs
apps/desktop/src-tauri/src/anchors/: cache.rs  debug.rs  drift.rs  mod.rs  reacquire.rs  score.rs  types.rs
apps/desktop/src-tauri/src/api/: agent_plant.rs  anchors.rs  app.rs  capture.rs  evidence.rs  exports.rs  jobs.rs  mod.rs  model_dock.rs  ocr.rs  proof.rs  runtime_events.rs  sessions.rs  slicer.rs  steps.rs  tauri_commands.rs  timeline.rs  verifiers.rs
apps/desktop/src-tauri/src/capture/: coord.rs  input.rs  mod.rs  screen.rs  window_meta.rs
apps/desktop/src-tauri/src/evidence/: coverage.rs  graph.rs  mod.rs  query.rs
apps/desktop/src-tauri/src/exports/: fs.rs  manifest.rs  mod.rs  proof_bundle.rs  runbook.rs  tutorial_pack.rs  verify.rs
apps/desktop/src-tauri/src/jobs/: cancel.rs  mod.rs  runner.rs  types.rs
apps/desktop/src-tauri/src/model_dock/: bench.rs  mod.rs  registry.rs  roles.rs
apps/desktop/src-tauri/src/ocr/: index.rs  (+3 more)
(+105 files in other folders)
