[package]
name = "opscinema_desktop_backend"
version.workspace = true
edition.workspace = true

[features]
default = []
runtime = ["dep:tauri"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
once_cell.workspace = true
rusqlite.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tauri = { version = "2", optional = true }
uuid.workspace = true
walkdir.workspace = true
opscinema_types = { path = "../../../crates/opscinema_types" }
opscinema_ipc = { path = "../../../crates/opscinema_ipc" }
opscinema_export_manifest = { path = "../../../crates/opscinema_export_manifest" }
opscinema_verifier_sdk = { path = "../../../crates/opscinema_verifier_sdk" }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2" }

[[bin]]
name = "opscinema-desktop"
path = "src/main.rs"
required-features = ["runtime"]
